# Private-Chest

./: CHANGELOG.md  README.md
apps/desktop/: README.md
apps/desktop/src/: index.html  index.js  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_state.rs  commands.rs  main.rs
apps/extension/: README.md  manifest.chrome.json  manifest.firefox.json
apps/extension/native-messaging/: install-native-host.ps1  io.privatechest.native.chrome.json  io.privatechest.native.firefox.json
crates/crypto_core/: Cargo.toml
crates/crypto_core/src/: aead.rs  kdf.rs  key_split.rs  lib.rs  rng.rs
crates/desktop_backend/: Cargo.toml
crates/desktop_backend/src/: backend.rs  clipboard.rs  lib.rs  models.rs  throttle.rs
crates/desktop_backend/tests/: autofill.rs
crates/native_host/: Cargo.toml
crates/native_host/src/: lib.rs  main.rs
crates/native_protocol/: Cargo.toml
crates/native_protocol/src/: domain_match.rs  lib.rs  request.rs  response.rs
crates/password_generator/: Cargo.toml
crates/password_generator/src/: charset.rs  generator.rs  lib.rs
crates/secret_types/: Cargo.toml
crates/secret_types/src/: lib.rs  redacted.rs  secret_bytes.rs  secret_string.rs
crates/session_manager/: Cargo.toml
crates/session_manager/src/: clipboard_clear.rs  idle.rs  lib.rs  manager.rs
crates/vault_domain/: Cargo.toml
crates/vault_format/: Cargo.toml
crates/vault_store/: Cargo.toml
docs/: cryptography.md  documents-chiffres.md  extension-security.md  ipc-protocol.md  release-hardening.md  tauri-hardening.md  threat-model.md  vault-format.md  windows-deployment.md
tests/corruption/: README.md
tests/generator/: README.md
tests/migration/: README.md
tests/tamper/: README.md
tests/unlock/: README.md
(+21 files in other folders)
